--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,52 @@
+# Android CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-android/ for more details
+#
 version: 2
 jobs:
   build:
-    working_directory: ~/code
+    working_directory: ~/Android-Kotlin-Clean-Architecture
     docker:
       - image: circleci/android:api-25-alpha
     environment:
-      JVM_OPTS: -Xmx4G
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
-      - run: echo "Mirkelam is working for you 👯"
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "presentation/build.gradle" }}
+#      - run:
+#         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+#         command: sudo chmod +x ./gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "presentation/build.gradle" }}
       - run:
-          name: Run Tests
-          command: ./gradlew lint test
-      - store_test_results:
-                path: app/build/test-results
-                destination: test-results/
-      - run:
-          name: Initial build
-          command: ./gradlew clean assembleRelease --no-daemon --stacktrace
+          name: Run Presentation Module Unit Tests
+          command: ./gradlew :presentation:testDebugUnitTest
       - store_artifacts:
-          path: app/build/outputs/apk/
-          destination: apks/
-      - deploy:
-          name: "Deploy to Fabric 🎉🎉"
-          command: |
-            echo "Branch: ${CIRCLE_BRANCH} , PR: ${CIRCLE_PULL_REQUEST}"
-            if [ "${CIRCLE_BRANCH}" == "develop" -o "${CIRCLE_PULL_REQUEST}" != "" ]; then
-              ./gradlew crashlyticsUploadDistributionDevelopmentRelease --stacktrace --debug --no-daemon
-            fi
-
-            release=$(cut -c-7 <<< "${CIRCLE_BRANCH}")
-            if [ "$release" == "release"]; then
-              ./gradlew crashlyticsUploadDistributionProductionRelease --stacktrace --debug --no-daemon
-            fi
+          path: presentation/build/reports
+      - store_test_results:
+          path: presentation/build/test-results
+      - run:
+          name: Run Domain Module Unit Tests
+          command: ./gradlew :domain:test
+      - store_artifacts:
+          path: domain/build/reports
+      - store_test_results:
+          path: domain/build/test-results
+      - run:
+          name: Run Data Module Unit Tests
+          command: ./gradlew :data:testDebugUnitTest
+      - store_artifacts:
+          path: data/build/reports
+      - store_test_results:
+          path: data/build/test-results
+      - run:
+          name: Run Lint Test
+          command: ./gradlew lint
+      - store_artifacts:
+          path: presentation/build/reports
