--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
 
 
     implementation 'androidx.preference:preference-ktx:1.1.1'
+
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation "androidx.activity:activity-ktx:1.1.0"
 }
